# Izdelie-os

./: .gitignore  CMakeLists.txt  README.md  kek  lol  lol.ufc.bak  main.c  run.sh
includes/: bitmap.h  dentry.h  disk_emulator.h  fileSystem.h  file_system.h  inode.h  kernel.h  list.h  shared.h  superblock.h  terminal.h  tools.h  user.h
os/: Cargo.toml
os/src/: main.rs
os/src/fs_structures/: directory.rs  inode.rs  mod.rs  superblock.rs  user.rs
src/: dentry.c  disk_emulator.c  file_system.c  inode.c  kernel.c  list.c  terminal.c  tools.c
